# jnd-dados-btcamp-cloud-aula2

./: .pre-commit-config.yaml  README.md  pyproject.toml
download/: YHWH.txt
src/backup_video/: __main__.py  etl.py
src/crud_boto3/: __main__.py
src/crud_boto3/aws/: client.py
