[project]
name = "jnd-dados-btcamp-cloud-aula2"
version = "0.1.0"
description = "Projeto da aula 02 do bootcamp de cloud da jornada de dados."
authors = [
    {name = "JadesonBruno",email = "jadesonbruno.a@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
